hphp/hack/test/typecheck/array_append_pair_component_good.php
<?hh
// Copyright 2004-present Facebook. All Rights Reserved.

function test(Pair<int, Vector<string>> $p): void {
  $p[1][] = 'foo';
}
